# Optimizations_VectorizationAndAlgebra

./: CMakeLists.txt  README.md  main.cpp  replacer.cmake  runner.cpp
.github/workflows/: cmake-multi-platform.yml
include/: config.hpp.in
